syntax = "proto3";

package store_db_item;

// store database item. This is stored in a protobuf message so that its contents can be easily encrypted. The content in the encrypted message will not be able to be analyzed with tools such as AWS Athena.
message StoreDbItem {
    string contact_first_name = 1;
    string contact_last_name = 2;
    string store_name = 3;
    string email = 4;
    string store_url = 5;
    string discord_username = 10;
    string state = 27;
    string country = 29;
    // a list of product_ids that the store is licensing to customers
    repeated bytes product_ids = 30;
}